--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,22 @@
     <string name="mary_jackson">Mary Jackson</string>
     <string name="my_study_group">My Study Group</string>
     <string name="title_activity_settings">"Settings "</string>
+    <string name="import">Import</string>
+    <string name="add">Add</string>
+    <string name="add1">Add</string>
+    <string name="communicate">Communicate</string>
+    <string name="delete">Delete</string>
+    <string name="delete1">Delete</string>
+    <string name="email">Email</string>
+    <string name="gallery">Gallery</string>
+    <string name="send_text">Send Text</string>
+    <string name="send">Send</string>
+    <string name="settings">Settings</string>
+    <string name="share">Share</string>
+    <string name="slideshow">Slideshow</string>
+    <string name="tools">Tools</string>
+    <string name="add2">Add</string>
+    <string name="delete2">Delete</string>
+    <string name="email1">Email</string>
+    <string name="send_text1">Send Text</string>
 </resources>
